--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,3 +22,4 @@ $coinlist-filter-spacing: 4px;
 $small-screen-breakpoint: 687px;
 $block-separation-desktop: 60px;
 $block-separation-mobile: 15px;
+$topnav-mobile-spacing: 45px;
